Moved Refine undo messages and also consumed the default alert() method to use new notifications.

--- a/refine/extensions/gokb/module/styles/common.less
+++ b/refine/extensions/gokb/module/styles/common.less
@@ -275,3 +275,18 @@ div.selector {
 .context-menu-submenu:after {
     top: 3px;
 }
+
+/** Notification styles **/
+.ui-pnotify {
+	font-size:1.2em;
+	a {
+		cursor:pointer;
+	}
+}
+
+.notification-action {
+	display:block;
+	font-weight: bold;
+	padding:0;
+	text-align:right;
+}
