Fix for the context menu opening below content.

--- a/refine/extensions/gokb/module/styles/common.less
+++ b/refine/extensions/gokb/module/styles/common.less
@@ -286,6 +286,14 @@ div.selector {
 }
 
 /** Context menu custom style **/
+.context-menu-layer {
+  z-index: 100000001 !important;
+}
+
+.context-menu-list {
+  z-index: 100000002 !important;
+}
+
 .context-menu-item {
   width:115px !important;
   font-size:1.1em;
